Added endpoint GET /movie/<movie_id> (tested and working). Changed /query_search and /movie_search to only return movies' _id, title, categories and thumbnail (reducing the size of results significantly). Updated Swagger Docs to reflect all changes in the api. Fixed a critical bug that was crashing /query_search if results contain multiple quotes appearing in the same movie.
