# api/static/swagger.json
@@ -102,6 +102,49 @@
           }
         }
       }
+    },
+    "/movie/{movie_id}": {
+      "get": {
+        "tags": [
+          "Movies"
+        ],
+        "summary": "Endpoint for getting a movie by iMDB ID",
+        "description": "A query will return full movie information (JSON) by iMDB ID if such movie exists. Otherwise it will return an HTTP 404 response with an empty JSON object.",
+        "parameters": [{
+          "in": "path",
+          "name": "movie_id",
+          "schema": {
+            "type": "string"
+          },
+          "required": true,
+          "description": "iMDB ID, e.g. 'tt1234567'"
+        }],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/movie"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Movie not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -153,6 +196,29 @@
           }
         }
       },
+      "movie_minimised_for_list": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string"
+          },
+          "movie_id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "categories": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "thumbnail": {
+            "type": "string"
+          }
+        }
+      },
       "movie_quote_combined": {
         "type": "object",
         "properties": {
@@ -172,21 +238,6 @@
           "title": {
             "type": "string"
           },
-          "description": {
-            "type": "string"
-          },
-          "year": {
-            "type": "number",
-            "format": "integer"
-          },
-          "rating": {
-            "type": "number",
-            "format": "float"
-          },
-          "countOfRatings": {
-            "type": "number",
-            "format": "integer"
-          },
           "categories": {
             "type": "array",
             "items": {
@@ -195,22 +246,13 @@
           },
           "thumbnail": {
             "type": "string"
-          },
-          "cast": {
-            "$ref": "#/components/schemas/cast_info"
-          },
-          "plotKeywords": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
           }
         }
       },
       "movies": {
         "type": "array",
         "items": {
-          "$ref": "#/components/schemas/movie"
+          "$ref": "#/components/schemas/movie_minimised_for_list"
         }
       },
       "query_search_response": {
@@ -240,7 +282,7 @@
           "movies": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/movie"
+              "$ref": "#/components/schemas/movie_minimised_for_list"
             }
           },
           "category_list": {
